# textum

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: coverage.yml  linux.yml  macos.yml
benchmark/: CMakeLists.txt
benchmark/textum/: CMakeLists.txt  aho_corasick.cpp
doc/: CMakeLists.txt  Doxyfile.in
include/textum/: aho_corasick.hpp  aho_corasick_state_attribute.hpp  basic_trie.hpp  fsm.hpp  levenshtein_parameters.hpp  trie.hpp  trie_state_attribute.hpp
include/textum/type_traits/: iterator_difference.hpp  iterator_value.hpp  range_value.hpp  remove_cvref.hpp
online/: CMakeLists.txt  textum_example.cpp  wandbox.py
test/: CMakeLists.txt
test/textum/: aho_corasick.cpp  fsm.cpp  trie.cpp
tools/: CMakeLists.txt  search.cpp  suggest.cpp
